# xtb-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  issues_notebook.github-issues  pyproject.toml  ruff.toml  xtb-sdk.code-workspace
__sources/: Python-XTB-API.py  XTBApi.py  __source_Python-XTB-API.py  __source_xAPI25-XTB-python_xAPIConnector.py  xAPI25-XTB-python_xAPIConnector_minimal_example.py
tests/: credentials.py  test_response.py
xtb_sdk/: __init__.py  api_client.py  api_socket.py  api_streaming_client.py  base_classes.py  clients.py  consts.py  credentials.py  exceptions.py  get_symbols.py  request.py  response.py  return_data_records.py  utils.py  xAPI25-XTB-python_xAPIConnector.py
xtb_sdk/data_model/: credentials.py  request.py  response.py  return_data_records.py
xtb_sdk/data_models/: credentials.py  request.py  response.py  return_data_records.py
xtb_sdk/data_requester/: api_client.py  api_socket.py  api_streaming_client.py  get_symbols.py  requester.py
xtb_sdk/data_writer/: write_symbols.py
xtb_sdk/utils/: consts.py  df_utils.py  exceptions.py  logging.py
