[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"


[tool.poetry]
    name        = "xtb-sdk"
    version     = "0.1.0"
    authors     = ["bwrob"]
    description = ""
    readme      = "README.md"
    packages    = [{ include = "xtb_sdk" }]

    [tool.poetry.dependencies]
        python = "^3.12"

        numpy        = "^2.1.0"
        pandas       = "^2.2.0"
        pandas-stubs = "^2.2.3"
        pydantic     = "^2.6.3"
        sqlalchemy   = "^2.0.37"
        sqlmodel     = "^0.0.22"
        sqlparse     = "^0.5.3"
        rich         = "^13.9.4"


    [tool.poetry.group.dev.dependencies]
        basedpyright = "^1.15.2"
        jupyter      = "^1.0"
        poethepoet   = "^0.32.1"
        pre-commit   = "^4.0.1"
        ruff         = "^0.9.2"

[tool.ruff]
    include        = ["tests/*.py", "xtb_sdk/*.py"]
    exclude        = ["__sources"]
    line-length    = 79
    target-version = "py313"

    [tool.ruff.lint]
        select = ["ALL"]
        ignore = [
            "COM812",
            "COM819",
            "D203",
            "D211",
            "D213",
            "FA102",
            "ISC001",
        ]

    [tool.ruff.format]
        docstring-code-format = true

[tool.basedpyright]
    typeCheckingMode = "all"
