[build-system]
    requires      = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"


[tool.poetry]
    name        = "xtb-sdk"
    version     = "0.0.1"
    authors     = ["bwrob"]
    description = ""
    readme      = "README.md"
    packages    = [{ include = "xtb_sdk" }]

    [tool.poetry.dependencies]
        python = "^3.13"

        hypothesis   = "^6.124.0"
        numpy        = "^2.2.1"
        pandas       = "^2.2.3"
        pandas-stubs = "^2.2.3.241126"
        pudb         = "^2024.1.3"
        pydantic     = "^2.10.5"
        pytest       = "^8.3.4"
        rich         = "^13.9.4"
        sqlalchemy   = "^2.0.37"
        sqlmodel     = "^0.0.22"
        sqlparse     = "^0.5.3"
        tqdm         = "^4.67.1"
        typer        = "^0.15.1"


    [tool.poetry.group.dev.dependencies]
        basedpyright = "^1.24.0"
        hapless      = "^0.7.1"
        icecream     = "^2.1.4"
        ipython      = "^8.31.0"
        jupyter      = "^1.1.1"
        poethepoet   = "^0.32.1"
        pre-commit   = "^4.0.1"
        ruff         = "^0.9.2"

[tool.ruff]
    exclude        = ["__sources"]
    line-length    = 79
    target-version = "py313"

    [tool.ruff.lint]
        select = ["ALL"]
        ignore = [
            "COM812",
            "COM819",
            "D203",
            "D211",
            "D213",
            "FA102",
            "ISC001",
        ]

    [tool.ruff.format]
        docstring-code-format = true

[tool.basedpyright]
    typeCheckingMode = "all"
